# hyper-catalan-cpp

./: CMakeLists.txt  LICENSE  README.md  accuracy_report.md  build.sh  hyper_catalan_debugged  hyper_catalan_simple  test_accuracy
src/: hyper_catalan_debugged.cpp  hyper_catalan_simple.cpp  hyper_catalan_solver.cpp  hyper_catalan_solver.h  main.cpp  test_accuracy.cpp
test/: example_tests.cpp  test_hyper_catalan.cpp
